added contact page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul id="nb">
             <li>HOME</li>
             <li>FLAVOURS</li>
-            <li>CONTACT</li>
+            <a href="contact.html"><li>CONTACT</li></a>
             <a href="registration.html"><li>REGISTER</li></a>
         </ul>
     </div>
