--- a/index.html
+++ b/index.html
@@ -70,5 +70,8 @@
         <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         <p>Feel free to contact us!</p>
     </div>
+
+    <script src="index.js"></script>
+
 </body>
 </html>
