--- a/registration.html
+++ b/registration.html
@@ -17,22 +17,28 @@
     <div class="container">
         <h1>REGISTRATION</h1>
         <div class="inputs">
-            <label for="fname">First Name</label>          
-            <input type="text" id="fname" value=""><br>
+            <form name="myForm" onsubmit="return validateForm()">
+                <label for="fname">First Name</label>          
+                <input type="text" id="fname" value=""><br>
 
-            <label for="lname">Last Name</label>        
-            <input type="text" id="lname" value=""><br>
+                <label for="lname">Last Name</label>        
+                <input type="text" id="lname" value=""><br>
 
-            <label for="email">Email</label>
-            <input type="email" id="email" value=""><br>
+                <label for="email">Email</label>
+                <input type="email" id="email" value=""><br>
 
-            <label for="password">Password</label>
-            <input type="password" id="password" value=""><br>
+                <label for="password">Password</label>
+                <input type="password" id="password" value=""><br>
+
+                <div class="submit-button">
+                    <input type="submit" id="submit" value="SUBMIT">
+                </div>
+            </form>
         </div>
 
-        <div class="submit-button">
-            <input type="submit" id="submit" value="SUBMIT">
-        </div>
     </div>
+
+    <script src="index.js"></script>
+
 </body>
 </html>
