--- a/registration.html
+++ b/registration.html
@@ -17,7 +17,7 @@
     <div class="container">
         <h1>REGISTRATION</h1>
         <div class="inputs">
-            <form name="myForm" onsubmit="return validateForm()">
+            <form name="myForm" onsubmit="return validateRegistration()">
                 <label for="fname">First Name</label>          
                 <input type="text" id="fname" value=""><br>
 
